--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,7 +2,7 @@
 #inventory = ./hosts
 inventory = ./inventory
 #private_key_file = .vagrant/machines/default/virtualbox/private_key
-#remote_user = jerrywu
+remote_user = root
 host_key_checking = False
 
 #[privilege_escalation]
