--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,7 +5,7 @@ inventory = ./inventory
 remote_user = root
 host_key_checking = False
 
-#[privilege_escalation]
-#become = True
-#become_method = sudo
-#become_user = root
+[privilege_escalation]
+become = True
+become_method = sudo
+become_user = root
